successfully implemented hex input and output for Encrypt